ajuste de rutas, documentacion de swagger
